# sl_api

./: .env  Cargo.toml  Dockerfile  Dockerfile.prod  Makefile  docker-compose.yml
.github/workflows/: api.yml
entity/src/: activity.rs  day.rs  lib.rs  mod.rs  personal_info.rs  prelude.rs  schedule.rs  sea_orm_active_enums.rs
migration/src/: lib.rs  m20250329_111027_day.rs  m20250329_111027_personal_info.rs  m20250329_112754_activity.rs  m20250329_112754_schedule.rs  m20250408_102850_add_created_at_to_day.rs  m20250414_111155_alter_hours_to_float.rs
scripts/: build_and_push_prod_docker_image.sh  build_docker.sh  generate_entity.sh  migrate.sh
src/: main.rs
src/api/: mod.rs
src/api/days/: mod.rs  req.rs  res.rs
src/api/personal_info/: mod.rs  req.rs  res.rs
src/api/ping/: mod.rs
