[package]
name = "sl_api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

actix-web = "4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print" ] }
log = "0.4.27"
env_logger = "0.11.7"
actix-cors = "0.7.1"
shuttle-actix-web = "0.53"
shuttle-runtime = "0.53"
tokio = "1"
shuttle-shared-db = { version = "0.53.0", features = ["postgres", "sqlx"] }
